<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.account.logout.LogoutFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clProfile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/back">

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/tvMessageLoggedOut"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/letters"
            android:layout_marginTop="250dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnGoToLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Button
            android:id="@+id/btnGoToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/letters"
            android:backgroundTint="@color/transparent"
            android:text="@string/Login"
            app:layout_constraintBottom_toTopOf="@id/tvOr"
            app:layout_constraintTop_toBottomOf="@id/tvMessage"
            app:layout_constraintStart_toStartOf="@id/tvMessage"
            app:layout_constraintEnd_toEndOf="@id/tvMessage"
            />

        <TextView
            android:id="@+id/tvOr"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/or"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginTop="25dp"
            android:textColor="@color/letters"
            app:layout_constraintTop_toBottomOf="@id/btnGoToLogin"
            app:layout_constraintBottom_toTopOf="@id/btnGoToSignUp"
            app:layout_constraintStart_toStartOf="@id/tvMessage"
            app:layout_constraintEnd_toEndOf="@id/tvMessage"
            />

        <Button
            android:id="@+id/btnGoToSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/letters"
            android:backgroundTint="@color/transparent"
            android:text="@string/SignUp"
            app:layout_constraintTop_toBottomOf="@id/tvOr"
            app:layout_constraintStart_toStartOf="@id/tvMessage"
            app:layout_constraintEnd_toEndOf="@id/tvMessage"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>