<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.account.login.LoginFragment">

    <data>

        <variable
            name="vmLogin"
            type="com.redville.mealapp.presentation.account.login.LoginViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/back">

        <TextView
            android:id="@+id/imgPfp"
            android:src="@drawable/ic_pfp1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:layout_marginTop="100dp"
            android:textColor="@color/letters"
            android:textSize="50sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/etUser"
            />

        <EditText
            android:id="@+id/etUser"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="@string/loginUser"
            android:textAlignment="center"
            android:layout_marginTop="50dp"
            android:foregroundTint="@color/letters"
            android:textColor="@color/letters"
            android:backgroundTint="@color/transparent"
            android:textColorHint="@color/letters"
            android:text="@={vmLogin.username}"
            app:layout_constraintTop_toBottomOf="@id/imgPfp"
            app:layout_constraintStart_toStartOf="@id/imgPfp"
            app:layout_constraintEnd_toEndOf="@id/imgPfp"
            app:layout_constraintBottom_toTopOf="@id/etPassword"
            />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="@string/etPassword"
            android:inputType="textPassword"
            android:foregroundTint="@color/letters"
            android:textColor="@color/letters"
            android:backgroundTint="@color/transparent"
            android:textColorHint="@color/letters"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:text="@={vmLogin.password}"
            app:layout_constraintTop_toBottomOf="@id/etUser"
            app:layout_constraintStart_toStartOf="@id/imgPfp"
            app:layout_constraintEnd_toEndOf="@id/imgPfp"
            app:layout_constraintBottom_toTopOf="@id/btnLogin"
            />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textColor="@color/back"
            android:backgroundTint="@color/purple_200"
            android:text="@string/Login"
            android:layout_marginBottom="200dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPassword"
            app:layout_constraintStart_toStartOf="@id/imgPfp"
            app:layout_constraintEnd_toEndOf="@id/imgPfp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>