<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.account.signup.SignupFragment">

    <data>

        <variable
            name="vmSignup"
            type="com.redville.mealapp.presentation.account.signup.SignupViewModel"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clSingUp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/back">

        <ImageView
            android:id="@+id/imgPfpSignUp"
            android:src="@drawable/ic_pfp1"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="70dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/imgPrevious"
            app:layout_constraintEnd_toStartOf="@id/imgNext"
            app:layout_constraintBottom_toTopOf="@id/etUsername"
            />

        <ImageView
            android:id="@+id/imgPrevious"
            android:src="@drawable/ic_navigate_before"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="70dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/imgPfpSignUp"
            app:layout_constraintBottom_toTopOf="@id/etUsername"
            />

        <ImageView
            android:id="@+id/imgNext"
            android:src="@drawable/ic_navigate_next"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="70dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/imgPfpSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/etUsername"
            />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="@string/etUsername"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:foregroundTint="@color/letters"
            android:textColor="@color/letters"
            android:backgroundTint="@color/transparent"
            android:textColorHint="@color/letters"
            android:text="@={vmSignup.name}"
            app:layout_constraintTop_toBottomOf="@id/imgPfpSignUp"
            app:layout_constraintStart_toStartOf="@id/imgPfpSignUp"
            app:layout_constraintEnd_toEndOf="@id/imgPfpSignUp"
            app:layout_constraintBottom_toTopOf="@id/etPassword"
            />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="@string/etPassword"
            android:foregroundTint="@color/letters"
            android:textColor="@color/letters"
            android:backgroundTint="@color/transparent"
            android:textColorHint="@color/letters"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:text="@={vmSignup.pass}"
            app:layout_constraintTop_toBottomOf="@id/etUsername"
            app:layout_constraintBottom_toTopOf="@id/etRepeatPassword"
            app:layout_constraintStart_toStartOf="@id/imgPfpSignUp"
            app:layout_constraintEnd_toEndOf="@id/imgPfpSignUp"
            />

        <EditText
            android:id="@+id/etRepeatPassword"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="@string/etRepeatPassword"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:foregroundTint="@color/letters"
            android:textColor="@color/letters"
            android:backgroundTint="@color/transparent"
            android:textColorHint="@color/letters"
            android:layout_marginTop="20dp"
            android:text="@={vmSignup.rePass}"
            app:layout_constraintTop_toBottomOf="@id/etPassword"
            app:layout_constraintStart_toStartOf="@id/imgPfpSignUp"
            app:layout_constraintEnd_toEndOf="@id/imgPfpSignUp"
            app:layout_constraintBottom_toTopOf="@id/btnSignUp"
            />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textColor="@color/back"
            android:backgroundTint="@color/purple_200"
            android:text="@string/SignUp"
            android:layout_marginBottom="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etRepeatPassword"
            app:layout_constraintStart_toStartOf="@id/imgPfpSignUp"
            app:layout_constraintEnd_toEndOf="@id/imgPfpSignUp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>